[tool.poetry]
authors = ["Tom Burge <tom@tomburge.org>"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
]
description = "Python Interface for US Government APIs"
documentation = "https://github.com/cloudstuffio/usagov"
homepage = "https://github.com/cloudstuffio/usagov"
keywords = ["congress", "gov", "usa", "usagov"]
license = "MIT"
name = "usagov"
readme = "README.md"
repository = "https://github.com/cloudstuffio/usagov"
version = "0.1.0"

[tool.poetry.dependencies]
python   = "^3.12"
requests = "^2.32.0"

[tool.poetry.group.dev.dependencies]
mypy           = "^1.11.2"
types-requests = "^2.32.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
